Remove scrollbar, to stop the visual irritation when switching between menu items

--- a/Startspeler/StartspelerMVC/wwwroot/css/site.css
+++ b/Startspeler/StartspelerMVC/wwwroot/css/site.css
@@ -62,6 +62,11 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    -ms-overflow-style: none; /* IE and Edge */
+
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .footer {
